--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Online Zoo</title>
   </head>
 
@@ -16,8 +16,8 @@
       <div class="container">
         <div class="header__content">
           <div class="logo">
-            <a href="/pages/main/index.html">
-              <img class="logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+            <a href="../main/index.html">
+              <img class="logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
             </a>
           </div>
           <nav class="nav">
@@ -26,13 +26,13 @@
                 <a class="menu__link menu__link--active" href="javascript:void(0)">about</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/map/map.html">map</a>
+                <a class="menu__link" href="../map/map.html">map</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/zoos/panda/panda.html">zoos</a>
+                <a class="menu__link" href="../zoos/panda/panda.html">zoos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -49,7 +49,7 @@
             <h2 class="hero-heading">Watch your favorite animal ONLINE</h2>
           </div>
           <div class="watch-your-favourite-animal__button">
-            <a class="button button--play" href="/pages/zoos/panda/panda.html"> <img src="/assets/icons/buttons/button-play.svg" alt="" /> Play</a>
+            <a class="button button--play" href="../zoos/panda/panda.html"> <img src="../../assets/icons/buttons/button-play.svg" alt="" /> Play</a>
           </div>
         </div>
       </div>
@@ -61,19 +61,19 @@
           <div class="pets-box">
             <ul class="pets">
               <li class="image eagle">
-                <img class="pet-image" src="/assets/images/pets-parallax/eagle.jpg" alt="eagle" />
+                <img class="pet-image" src="../../assets/images/pets-parallax/eagle.jpg" alt="eagle" />
               </li>
               <li class="image tiger">
-                <img class="pet-image" src="/assets/images/pets-parallax/tiger.jpg" alt="tiger" />
+                <img class="pet-image" src="../../assets/images/pets-parallax/tiger.jpg" alt="tiger" />
               </li>
               <li class="image panda">
-                <img class="pet-image" src="/assets/images/pets-parallax/panda.jpg" alt="panda" />
+                <img class="pet-image" src="../../assets/images/pets-parallax/panda.jpg" alt="panda" />
               </li>
               <li class="image monkey">
-                <img class="pet-image" src="/assets/images/pets-parallax/monkey.jpg" alt="monkey" />
+                <img class="pet-image" src="../../assets/images/pets-parallax/monkey.jpg" alt="monkey" />
               </li>
               <li class="image elephant">
-                <img class="pet-image" src="/assets/images/pets-parallax/elephant.jpg" alt="elephant" />
+                <img class="pet-image" src="../../assets/images/pets-parallax/elephant.jpg" alt="elephant" />
               </li>
             </ul>
           </div>
@@ -94,13 +94,13 @@
           <div class="slider-box__wrapper">
             <div class="slider-box">
               <button class="arrow arrow-left">
-                <img src="/assets/icons/buttons/arrow-left.svg" alt="" />
+                <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
               </button>
               <div class="cards">
                 <div class="card-wrapper">
-                  <a class="card" href="/pages/zoos/panda/panda.html">
+                  <a class="card" href="../zoos/panda/panda.html">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/panda.jpg" alt="panda" />
+                      <img class="card-image" src="../../assets/images/pets-slider/panda.jpg" alt="panda" />
                       <figcaption class="card-caption">
                         <p class="card-name">Panda, China</p>
                       </figcaption>
@@ -108,9 +108,9 @@
                   </a>
                 </div>
                 <div class="card-wrapper">
-                  <a class="card" href="/pages/zoos/alligator/alligator.html">
+                  <a class="card" href="../../zoos/alligator/alligator.html">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/alligator.jpg" alt="alligator" />
+                      <img class="card-image" src="../../assets/images/pets-slider/alligator.jpg" alt="alligator" />
                       <figcaption class="card-caption">
                         <p class="card-name">Alligator, USA</p>
                       </figcaption>
@@ -118,9 +118,9 @@
                   </a>
                 </div>
                 <div class="card-wrapper">
-                  <a class="card" href="/pages/zoos/gorilla/gorilla.html">
+                  <a class="card" href="../../zoos/gorilla/gorilla.html">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
+                      <img class="card-image" src="../../assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
                       <figcaption class="card-caption">
                         <p class="card-name">Gorilla, Eastern DRC</p>
                       </figcaption>
@@ -130,7 +130,7 @@
                 <div class="card-wrapper">
                   <a class="card" href="javascript:void(0)">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/elephant.jpg" alt="elephant" />
+                      <img class="card-image" src="../../assets/images/pets-slider/elephant.jpg" alt="elephant" />
                       <figcaption class="card-caption">
                         <p class="card-name">Elephant, South Africa</p>
                       </figcaption>
@@ -140,7 +140,7 @@
                 <div class="card-wrapper">
                   <a class="card" href="javascript:void(0)">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
+                      <img class="card-image" src="../../assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
                       <figcaption class="card-caption">
                         <p class="card-name">Polar Bear, Canada</p>
                       </figcaption>
@@ -148,9 +148,9 @@
                   </a>
                 </div>
                 <div class="card-wrapper">
-                  <a class="card" href="/pages/zoos/eagle/eagle.html">
+                  <a class="card" href="../../zoos/eagle/eagle.html">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
+                      <img class="card-image" src="../../assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
                       <figcaption class="card-caption">
                         <p class="card-name">Bald eagle, USA</p>
                       </figcaption>
@@ -160,7 +160,7 @@
                 <div class="card-wrapper">
                   <a class="card" href="javascript:void(0)">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
+                      <img class="card-image" src="../../assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
                       <figcaption class="card-caption">
                         <p class="card-name">Arctcic snowy owl, Alaska</p>
                       </figcaption>
@@ -170,7 +170,7 @@
                 <div class="card-wrapper">
                   <a class="card" href="javascript:void(0)">
                     <figure>
-                      <img class="card-image" src="/assets/images/pets-slider/penguin.jpg" alt="penguin" />
+                      <img class="card-image" src="../../assets/images/pets-slider/penguin.jpg" alt="penguin" />
                       <figcaption class="card-caption">
                         <p class="card-name">Penguin, USA</p>
                       </figcaption>
@@ -179,13 +179,13 @@
                 </div>
               </div>
               <button class="arrow arrow-right">
-                <img src="/assets/icons/buttons/arrow-right.svg" alt="" />
+                <img src="../../assets/icons/buttons/arrow-right.svg" alt="" />
               </button>
             </div>
           </div>
         </div>
         <div class="pets-in-zoo__button">
-          <a class="button choose-your-favourite__button" href="/pages/map/map.html">Choose your favourite</a>
+          <a class="button choose-your-favourite__button" href="../../map/map.html">Choose your favourite</a>
         </div>
       </section>
       <section class="pay-and-feed">
@@ -193,18 +193,18 @@
           <h2 class="heading">pay and feed</h2>
           <div class="pay-and-feed__icons">
             <div class="icon">
-              <img class="icon" src="/assets/icons/pay/card.svg" alt="card" />
+              <img class="icon" src="../../assets/icons/pay/card.svg" alt="card" />
               <p class="icon__caption">You can pay for a donation to any animal using your Credit/Debit card</p>
             </div>
             <div class="arrow-icon">
-              <img class="icon" src="/assets/icons/pay/arrow.svg" alt="arrow" />
+              <img class="icon" src="../../assets/icons/pay/arrow.svg" alt="arrow" />
             </div>
             <div class="icon">
-              <img class="icon" src="/assets/icons/pay/zoo.svg" alt="zoo" />
+              <img class="icon" src="../../assets/icons/pay/zoo.svg" alt="zoo" />
               <p class="icon__caption">Donations will go to the account of the zoo or nature reserve</p>
             </div>
             <div class="icon">
-              <img class="icon" src="/assets/icons/pay/panda.svg" alt="panda" />
+              <img class="icon" src="../../assets/icons/pay/panda.svg" alt="panda" />
               <p class="icon__caption">The animal will receive a delicious treat during feeding hours</p>
             </div>
           </div>
@@ -216,11 +216,11 @@
           <div class="feedback-slider-box_wrapper">
             <div class="feedback-slider-box">
               <button class="arrow arrow-left">
-                <img src="/assets/icons/buttons/arrow-left.svg" alt="" />
+                <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
               </button>
               <div class="feedback__card-wrapper">
                 <div class="feedback__card">
-                  <img class="person-image" src="/assets/images/testimonials/karen.jpg" alt="Karen" />
+                  <img class="person-image" src="../../assets/images/testimonials/karen.jpg" alt="Karen" />
                   <div class="feedback__card-caption">
                     <h3 class="person-name">Karen Maitland</h3>
                     <div class="person-donation">+$10</div>
@@ -233,7 +233,7 @@
               </div>
               <div class="feedback__card-wrapper">
                 <div class="feedback__card">
-                  <img class="person-image" src="/assets/images/testimonials/sara.jpg" alt="Sara" />
+                  <img class="person-image" src="../../assets/images/testimonials/sara.jpg" alt="Sara" />
                   <div class="feedback__card-caption">
                     <h3 class="person-name">Sara Jones</h3>
                     <div class="person-donation">+$13</div>
@@ -246,7 +246,7 @@
               </div>
               <div class="feedback__card-wrapper">
                 <div class="feedback__card">
-                  <img class="person-image" src="/assets/images/testimonials/alex.jpg" alt="Alex" />
+                  <img class="person-image" src="../../assets/images/testimonials/alex.jpg" alt="Alex" />
                   <div class="feedback__card-caption">
                     <h3 class="person-name">Alex Barden</h3>
                     <div class="person-donation">+$7</div>
@@ -259,7 +259,7 @@
               </div>
               <div class="feedback__card-wrapper">
                 <div class="feedback__card">
-                  <img class="person-image" src="/assets/images/testimonials/alene.jpg" alt="Alene" />
+                  <img class="person-image" src="../../assets/images/testimonials/alene.jpg" alt="Alene" />
                   <div class="feedback__card-caption">
                     <h3 class="person-name">Alene Ray</h3>
                     <div class="person-donation">+$18</div>
@@ -270,7 +270,7 @@
                   </p>
                 </div>
               </div>
-              <button class="arrow arrow-right"><img src="/assets/icons/buttons/arrow-right.svg" alt="" /></button>
+              <button class="arrow arrow-right"><img src="../../assets/icons/buttons/arrow-right.svg" alt="" /></button>
             </div>
             <div class="feedback__button">
               <a class="button leave-feedback__button" href="javascript:void(0)">Leave feedback</a>
@@ -285,7 +285,7 @@
           <div class="footer-content">
             <div class="footer-links__logo-button">
               <a href="/pages/main/index.html">
-                <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+                <img class="logo footer-logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
@@ -298,10 +298,10 @@
                       <a class="menu__link" href="#">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                      <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="/pages/map/map.html">map</a>
+                      <a class="menu__link" href="../map/map.html">map</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="javascript:void(0)">feedback</a>
@@ -312,22 +312,22 @@
                 <ul class="social">
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.instagram.com">
-                      <img src="/assets/icons/socials/insta.svg" alt="" />
+                      <img src="../../assets/icons/socials/insta.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.facebook.com">
-                      <img src="/assets/icons/socials/facebook.svg" alt="" />
+                      <img src="../../assets/icons/socials/facebook.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.twitter.com">
-                      <img src="/assets/icons/socials/twitter.svg" alt="" />
+                      <img src="../../assets/icons/socials/twitter.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://youtube.com">
-                      <img src="/assets/icons/socials/youtube.svg" alt="" />
+                      <img src="../../assets/icons/socials/youtube.svg" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -337,10 +337,10 @@
           <div class="footer-credentials">
             <div class="schools-logo">
               <a class="rss-logo" href="javascript:void(0)" title="Rolling Scopes School">
-                <img src="/assets/icons/logo/rss-logo.svg" alt="" />
+                <img src="../../assets/icons/logo/rss-logo.svg" alt="" />
               </a>
               <a class="yd-logo" href="javascript:void(0)" title="Yem Digital">
-                <img src="/assets/icons/logo/yd-logo.svg" alt="" />
+                <img src="../../assets/icons/logo/yd-logo.svg" alt="" />
               </a>
             </div>
             <div class="footer-copyright">
