--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="map.css" />
+    <link rel="stylesheet" href="./map.css" />
     <title>Online Zoo</title>
   </head>
 
@@ -17,23 +17,23 @@
         <div class="container">
           <div class="header__content">
             <div class="logo">
-              <a href="/pages/main/index.html">
-                <img class="logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+              <a href="../main/index.html">
+                <img class="logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
             </div>
             <nav class="nav">
               <ul class="menu">
                 <li class="menu__item">
-                  <a class="menu__link" href="/pages/main/index.html">about</a>
+                  <a class="menu__link" href="../../pages/main/index.html">about</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link menu__link--active" href="javascript:void(0)">map</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="/pages/zoos/panda/panda.html">zoos</a>
+                  <a class="menu__link" href="../zoos/panda/panda.html">zoos</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                  <a class="menu__link" href="../pages/page-not-found/page-not-found.html">contact us</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -46,15 +46,15 @@
       <main class="main">
         <div class="map-container">
           <div class="map">
-            <img class="map-img" src="/assets/images/map/map.svg" alt="" />
+            <img class="map-img" src="../../assets/images/map/map.svg" alt="" />
             <div class="zoom">
               <button class="zoom-out">-</button>
               <button class="zoom-in">+</button>
             </div>
             <div class="map__pet map__pet--eagle">
               <div class="map__icon-container map__icon-container--eagle">
-                <a class="map__link map__link--eagle" href="/pages/zoos/eagle/eagle.html">
-                  <img class="map__icon map__icon--eagle" src="/assets/icons/pets/eagle.png" alt="eagle" />
+                <a class="map__link map__link--eagle" href="../zoos/eagle/eagle.html">
+                  <img class="map__icon map__icon--eagle" src="../../assets/icons/pets/eagle.png" alt="eagle" />
                 </a>
               </div>
               <span class="tooltip tooltip-eagle">
@@ -65,7 +65,7 @@
               </span>
               <div class="map__pet-name map__pet-name--eagle">eagle</div>
               <div class="map__mark map__mark--eagle">
-                <img src="/assets/icons/marker/marker.svg" alt="" />
+                <img src="../../assets/icons/marker/marker.svg" alt="" />
               </div>
               <div class="map__location map__location--usa">
                 <p>USA</p>
@@ -73,8 +73,8 @@
             </div>
             <div class="map__pet map__pet--alligator">
               <div class="map__icon-container map__icon-container--alligator">
-                <a class="map__link map__link--alligator" href="/pages/zoos/alligator/alligator.html">
-                  <img class="map__icon map__icon--alligator" src="/assets/icons/pets/alligator.png" alt="alligator" />
+                <a class="map__link map__link--alligator" href="../zoos/alligator/alligator.html">
+                  <img class="map__icon map__icon--alligator" src="../../assets/icons/pets/alligator.png" alt="alligator" />
                 </a>
               </div>
               <span class="tooltip tooltip-alligator">
@@ -85,13 +85,13 @@
               </span>
               <div class="map__pet-name map__pet-name--alligator">alligator</div>
               <div class="map__mark map__mark--alligator">
-                <img src="/assets/icons/marker/marker.svg" alt="" />
+                <img src="../../assets/icons/marker/marker.svg" alt="" />
               </div>
             </div>
             <div class="map__pet map__pet--gorilla">
               <div class="map__icon-container map__icon-container--gorilla">
-                <a class="map__link map__link--gorilla" href="/pages/zoos/gorilla/gorilla.html">
-                  <img class="map__icon map__icon--gorilla" src="/assets/icons/pets/gorilla.png" alt="gorilla" />
+                <a class="map__link map__link--gorilla" href="../zoos/gorilla/gorilla.html">
+                  <img class="map__icon map__icon--gorilla" src="../../assets/icons/pets/gorilla.png" alt="gorilla" />
                 </a>
               </div>
               <span class="tooltip tooltip-gorilla">
@@ -102,7 +102,7 @@
               </span>
               <div class="map__pet-name map__pet-name--gorilla">gorilla</div>
               <div class="map__mark map__mark--gorilla">
-                <img src="/assets/icons/marker/marker.svg" alt="" />
+                <img src="../../assets/icons/marker/marker.svg" alt="" />
                 <div class="map__location map__location--drc">
                   <p>Eastern<br />DRC</p>
                 </div>
@@ -110,8 +110,8 @@
             </div>
             <div class="map__pet map__pet--panda">
               <div class="map__icon-container map__icon-container--panda">
-                <a class="map__link map__link--panda" href="/pages/zoos/panda/panda.html">
-                  <img class="map__icon map__icon--panda" src="/assets/icons/pets/panda.png" alt="panda" />
+                <a class="map__link map__link--panda" href="../zoos/panda/panda.html">
+                  <img class="map__icon map__icon--panda" src="../../assets/icons/pets/panda.png" alt="panda" />
                 </a>
               </div>
               <span class="tooltip tooltip-panda">
@@ -122,7 +122,7 @@
               </span>
               <div class="map__pet-name map__pet-name--panda">panda bear</div>
               <div class="map__mark map__mark--panda">
-                <img src="/assets/icons/marker/marker.svg" alt="" />
+                <img src="../../assets/icons/marker/marker.svg" alt="" />
                 <div class="map__location map__location--china">
                   <p>China</p>
                 </div>
@@ -137,8 +137,8 @@
         <div class="container content">
           <div class="footer-content">
             <div class="footer-links__logo-button">
-              <a href="/pages/main/index.html">
-                <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+              <a href="../main/index.html">
+                <img class="logo footer-logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
@@ -151,10 +151,10 @@
                       <a class="menu__link" href="#">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                      <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="/pages/map/map.html">map</a>
+                      <a class="menu__link" href="../map/map.html">map</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="javascript:void(0)">feedback</a>
@@ -165,22 +165,22 @@
                 <ul class="social">
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.instagram.com">
-                      <img src="/assets/icons/socials/insta.svg" alt="" />
+                      <img src="../../assets/icons/socials/insta.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.facebook.com">
-                      <img src="/assets/icons/socials/facebook.svg" alt="" />
+                      <img src="../../assets/icons/socials/facebook.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.twitter.com">
-                      <img src="/assets/icons/socials/twitter.svg" alt="" />
+                      <img src="../../assets/icons/socials/twitter.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://youtube.com">
-                      <img src="/assets/icons/socials/youtube.svg" alt="" />
+                      <img src="../../assets/icons/socials/youtube.svg" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -190,10 +190,10 @@
           <div class="footer-credentials">
             <div class="schools-logo">
               <a class="rss-logo" href="javascript:void(0)" title="Rolling Scopes School">
-                <img src="/assets/icons/logo/rss-logo.svg" alt="" />
+                <img src="../../assets/icons/logo/rss-logo.svg" alt="" />
               </a>
               <a class="yd-logo" href="javascript:void(0)" title="Yem Digital">
-                <img src="/assets/icons/logo/yd-logo.svg" alt="" />
+                <img src="../../assets/icons/logo/yd-logo.svg" alt="" />
               </a>
             </div>
             <div class="footer-copyright">
