--- a/online-zoo/pages/zoos/panda/panda.html
+++ b/online-zoo/pages/zoos/panda/panda.html
@@ -16,23 +16,23 @@
       <div class="container">
         <div class="header__content">
           <div class="logo">
-            <a href="/pages/main/index.html">
-              <img class="logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+            <a href="../../main/index.html">
+              <img class="logo" src="../../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
             </a>
           </div>
           <nav class="nav">
             <ul class="menu">
               <li class="menu__item">
-                <a class="menu__link" href="/pages/main/index.html">about</a>
+                <a class="menu__link" href="../main/index.html">about</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/map/map.html">map</a>
+                <a class="menu__link" href="../map/map.html">map</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link menu__link--active" href="javascript:void(0)">zoos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -46,8 +46,8 @@
       <ul class="sidebar-menu">
         <li class="sidebar-icon">
           <div class="icon-container">
-            <a href="/pages/zoos/alligator/alligator.html">
-              <img class="icon-img" src="/assets/icons/pets/alligator.png" alt="" />
+            <a href="../alligator/alligator.html">
+              <img class="icon-img" src="../../../assets/icons/pets/alligator.png" alt="" />
             </a>
           </div>
           <span class="tooltip tooltip-alligator">
@@ -60,7 +60,7 @@
         <li class="sidebar-icon icon-active">
           <div class="icon-container">
             <a href="javascript:void(0)">
-              <img class="icon-img" src="/assets/images/pets-sidebar/panda.png" alt="" />
+              <img class="icon-img" src="../../../assets/images/pets-sidebar/panda.png" alt="" />
             </a>
           </div>
           <span class="tooltip tooltip-panda">
@@ -72,8 +72,8 @@
         </li>
         <li class="sidebar-icon">
           <div class="icon-container">
-            <a href="/pages/zoos/eagle/eagle.html">
-              <img class="icon-img" src="/assets/images/pets-sidebar/eagle.png" alt="" />
+            <a href="../eagle/eagle.html">
+              <img class="icon-img" src="../../../assets/images/pets-sidebar/eagle.png" alt="" />
             </a>
           </div>
           <span class="tooltip tooltip-eagle">
@@ -85,8 +85,8 @@
         </li>
         <li class="sidebar-icon">
           <div class="icon-container">
-            <a href="/pages/zoos/gorilla/gorilla.html">
-              <img class="icon-img" src="/assets/images/pets-sidebar/gorilla.png" alt="" />
+            <a href="../gorilla/gorilla.html">
+              <img class="icon-img" src="../../../assets/images/pets-sidebar/gorilla.png" alt="" />
             </a>
           </div>
           <span class="tooltip tooltip-gorilla">
@@ -99,7 +99,7 @@
         <li class="sidebar-icon">
           <div class="icon-container">
             <a href="javascript:void(0)">
-              <img class="icon-img" src="/assets/images/pets-sidebar/feed.svg" alt="" />
+              <img class="icon-img" src="../../../assets/images/pets-sidebar/feed.svg" alt="" />
             </a>
           </div>
         </li>
@@ -220,8 +220,8 @@
         <div class="container content">
           <div class="footer-content">
             <div class="footer-links__logo-button">
-              <a href="/pages/main/index.html">
-                <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+              <a href="../main/index.html">
+                <img class="logo footer-logo" src="../../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
@@ -231,13 +231,13 @@
                 <nav class="footer-nav">
                   <ul class="menu footer-menu">
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="#">about</a>
+                      <a class="menu__link" href="../../main/index.html">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                      <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="/pages/map/map.html">map</a>
+                      <a class="menu__link" href="../map/map.html">map</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="javascript:void(0)">feedback</a>
@@ -248,22 +248,22 @@
                 <ul class="social">
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.instagram.com">
-                      <img src="/assets/icons/socials/insta.svg" alt="" />
+                      <img src="../../../assets/icons/socials/insta.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.facebook.com">
-                      <img src="/assets/icons/socials/facebook.svg" alt="" />
+                      <img src="../../../assets/icons/socials/facebook.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://www.twitter.com">
-                      <img src="/assets/icons/socials/twitter.svg" alt="" />
+                      <img src="../../../assets/icons/socials/twitter.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
                     <a class="menu__link" href="https://youtube.com">
-                      <img src="/assets/icons/socials/youtube.svg" alt="" />
+                      <img src="../../../assets/icons/socials/youtube.svg" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -273,10 +273,10 @@
           <div class="footer-credentials">
             <div class="schools-logo">
               <a class="rss-logo" href="javascript:void(0)" title="Rolling Scopes School">
-                <img src="/assets/icons/logo/rss-logo.svg" alt="" />
+                <img src="../../../assets/icons/logo/rss-logo.svg" alt="" />
               </a>
               <a class="yd-logo" href="javascript:void(0)" title="Yem Digital">
-                <img src="/assets/icons/logo/yd-logo.svg" alt="" />
+                <img src="../../../assets/icons/logo/yd-logo.svg" alt="" />
               </a>
             </div>
             <div class="footer-copyright">
