--- a/online-zoo/pages/page-not-found/page-not-found.html
+++ b/online-zoo/pages/page-not-found/page-not-found.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="page-not-found.css" />
+    <link rel="stylesheet" href="./page-not-found.css" />
     <title>Online Zooo</title>
   </head>
   <body>
@@ -20,7 +20,7 @@
             <h2 class="main-heading">ooops!</h2>
           </div>
           <div class="not-found-img">
-            <img src="/assets/404/404.svg" alt="" />
+            <img src="../../assets/404/404.svg" alt="" />
           </div>
           <div class="not-found">
             <h3 class="heading-title">page not found</h3>
