--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -17,7 +17,7 @@
         <div class="container">
           <div class="header__content">
             <div class="logo">
-              <a href="../main/index.html">
+              <a href="../../main/index.html">
                 <img class="logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
             </div>
@@ -137,7 +137,7 @@
         <div class="container content">
           <div class="footer-content">
             <div class="footer-links__logo-button">
-              <a href="../main/index.html">
+              <a href="../../main/index.html">
                 <img class="logo footer-logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
