--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -32,7 +32,7 @@
                 <a class="menu__link" href="../zoos/panda/panda.html">zoos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
+                <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="pets-in-zoo__button">
-          <a class="button choose-your-favourite__button" href="../../map/map.html">Choose your favourite</a>
+          <a class="button choose-your-favourite__button" href="../map/map.html">Choose your favourite</a>
         </div>
       </section>
       <section class="pay-and-feed">
@@ -284,7 +284,7 @@
         <div class="container content">
           <div class="footer-content">
             <div class="footer-links__logo-button">
-              <a href="/pages/main/index.html">
+              <a href="../main/index.html">
                 <img class="logo footer-logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
@@ -298,7 +298,7 @@
                       <a class="menu__link" href="#">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
+                      <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="../map/map.html">map</a>
